# aoc

./: .gitignore
2023/: .gitignore
2023/aoc_helpers/: Cargo.toml
2023/aoc_helpers/src/: grid.rs  lib.rs
2023/rust/: Cargo.toml
2023/rust/src/: lib.rs
2023/src/: lib.rs
2023/zig/: build.zig
2023/zig/src/: 03.zig  main.zig
2024/rust/: Cargo.toml  day.rs.tpl  input
2024/rust/aoc/: Cargo.toml
2024/rust/aoc_macros/: Cargo.toml
2024/rust/src/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day9.rs  lib.rs  main.rs
2025/rust/: Cargo.toml
2025/rust/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  lib.rs  main.rs
