[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

[lib]
# proc-macro = true

[profile.dev]
overflow-checks = false

[dependencies]
bstr = "1.8.0"
faster-hex = "0.9.0"
itertools = "0.12"
hashbrown = "0.14"
rayon = "1.8.0"
num = "0.4.1"
# lib proc-macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
nom = "7.1.3"
anyhow = "1.0.75"

aoc_macros = { path = "aoc_macros"}
aoc_helpers = { path = "../../2023/aoc_helpers" }
