[package]
name = "aoc"
version = "0.1.0"
edition = "2024"
default-run = "aoc"

[lib]
# proc-macro = true

[profile.dev]
overflow-checks = false

[dependencies]
bstr = "1.11.1"
faster-hex = "0.10.0"
itertools = "0.14.0"
hashbrown = "0.16.1"
rayon = "1.8.0"
num = "0.4.1"
# lib proc-macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
nom = "8.0.0"
anyhow = "1.0.75"

# aoc_macros = { path = "aoc_macros" }
aoc_helpers = { path = "../../2023/aoc_helpers" }

aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
lazy_static = "1.5.0"

[profile.release]
debug = true
